# openapi/servergen/go/model__balances_get_200_response.go
@@ -1,0 +1,45 @@
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+/*
+ * Crypto Wallet REST API
+ *
+ * REST API for air-gapped crypto wallets. Supports multiple cryptocurrencies with fiat currency conversion, future-proof. 
+ *
+ * API version: 1.0.2
+ */
+
+package cryptowalletrest
+
+
+import (
+	"time"
+)
+
+
+
+type BalancesGet200Response struct {
+
+	Results []BalancesGet200ResponseResultsInner `json:"results,omitempty"`
+
+	Timestamp time.Time `json:"timestamp,omitempty"`
+}
+
+// AssertBalancesGet200ResponseRequired checks if the required fields are not zero-ed
+func AssertBalancesGet200ResponseRequired(obj BalancesGet200Response) error {
+	for _, el := range obj.Results {
+		if err := AssertBalancesGet200ResponseResultsInnerRequired(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
+
+// AssertBalancesGet200ResponseConstraints checks if the values respects the defined constraints
+func AssertBalancesGet200ResponseConstraints(obj BalancesGet200Response) error {
+	for _, el := range obj.Results {
+		if err := AssertBalancesGet200ResponseResultsInnerConstraints(el); err != nil {
+			return err
+		}
+	}
+	return nil
+}
