# openapi/servergen/go/model__balances_post_200_response.go
@@ -1,45 +1,0 @@
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-/*
- * Crypto Wallet REST API
- *
- * REST API for air-gapped crypto wallets. Supports multiple cryptocurrencies with fiat currency conversion, future-proof. 
- *
- * API version: 1.0.2
- */
-
-package cryptowalletrest
-
-
-import (
-	"time"
-)
-
-
-
-type BalancesPost200Response struct {
-
-	Results []BalancesPost200ResponseResultsInner `json:"results,omitempty"`
-
-	Timestamp time.Time `json:"timestamp,omitempty"`
-}
-
-// AssertBalancesPost200ResponseRequired checks if the required fields are not zero-ed
-func AssertBalancesPost200ResponseRequired(obj BalancesPost200Response) error {
-	for _, el := range obj.Results {
-		if err := AssertBalancesPost200ResponseResultsInnerRequired(el); err != nil {
-			return err
-		}
-	}
-	return nil
-}
-
-// AssertBalancesPost200ResponseConstraints checks if the values respects the defined constraints
-func AssertBalancesPost200ResponseConstraints(obj BalancesPost200Response) error {
-	for _, el := range obj.Results {
-		if err := AssertBalancesPost200ResponseResultsInnerConstraints(el); err != nil {
-			return err
-		}
-	}
-	return nil
-}
