# openapi/servergen/go/model__balances_post_200_response_results_inner.go
@@ -1,67 +1,0 @@
-// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
-
-/*
- * Crypto Wallet REST API
- *
- * REST API for air-gapped crypto wallets. Supports multiple cryptocurrencies with fiat currency conversion, future-proof. 
- *
- * API version: 1.0.2
- */
-
-package cryptowalletrest
-
-
-import (
-	"time"
-)
-
-
-
-type BalancesPost200ResponseResultsInner struct {
-
-	CryptoSymbol string `json:"crypto_symbol"`
-
-	Address string `json:"address"`
-
-	CryptoBalance float64 `json:"crypto_balance"`
-
-	FiatSymbol string `json:"fiat_symbol"`
-
-	FiatValue float64 `json:"fiat_value"`
-
-	ExchangeRate float64 `json:"exchange_rate"`
-
-	// Absolute change in fiat value over the last 24 hours
-	Change24h float64 `json:"change24h"`
-
-	Timestamp time.Time `json:"timestamp"`
-
-	// Error message if this specific balance fetch failed
-	Error string `json:"error,omitempty"`
-}
-
-// AssertBalancesPost200ResponseResultsInnerRequired checks if the required fields are not zero-ed
-func AssertBalancesPost200ResponseResultsInnerRequired(obj BalancesPost200ResponseResultsInner) error {
-	elements := map[string]interface{}{
-		"crypto_symbol": obj.CryptoSymbol,
-		"address": obj.Address,
-		"crypto_balance": obj.CryptoBalance,
-		"fiat_symbol": obj.FiatSymbol,
-		"fiat_value": obj.FiatValue,
-		"exchange_rate": obj.ExchangeRate,
-		"change24h": obj.Change24h,
-		"timestamp": obj.Timestamp,
-	}
-	for name, el := range elements {
-		if isZero := IsZeroValue(el); isZero {
-			return &RequiredError{Field: name}
-		}
-	}
-
-	return nil
-}
-
-// AssertBalancesPost200ResponseResultsInnerConstraints checks if the values respects the defined constraints
-func AssertBalancesPost200ResponseResultsInnerConstraints(obj BalancesPost200ResponseResultsInner) error {
-	return nil
-}
